--- a/src/components/assests/scss/components/_profile.scss
+++ b/src/components/assests/scss/components/_profile.scss
@@ -15,3 +15,10 @@
     }
   }
 }
+.update-profile a.cancel {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
